<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".auth.LoginFragment">

    <ImageView
        android:id="@+id/myImageView"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/football"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- TODO: Update blank fragment layout -->
    <EditText

        app:layout_constraintTop_toBottomOf="@+id/myImageView"
        android:id="@+id/nameET"
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:layout_height="60dp"
        android:background="@drawable/edit_text_background"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"/>
<!--PhoneET-->
    <EditText

        app:layout_constraintTop_toBottomOf="@+id/nameET"
        android:id="@+id/phoneET"
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:layout_height="60dp"
        android:background="@drawable/edit_text_background"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:hint="@string/enter_phone"
        android:inputType="phone|number"/>

    <!--email-->
    <EditText

        app:layout_constraintTop_toBottomOf="@+id/phoneET"
        android:id="@+id/emailET"
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:layout_height="60dp"
        android:background="@drawable/edit_text_background"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"/>

    <!--Email-->
    <EditText

        app:layout_constraintTop_toBottomOf="@+id/emailET"
        android:id="@+id/passwordET"
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:layout_height="60dp"
        android:background="@drawable/edit_text_background"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword" />

    <!--Password-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registerBTN"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/passwordET"
        android:layout_marginTop="20dp"
        android:layout_margin="20dp"
        android:text="@string/sign_up"
        android:background="@drawable/btn_background"
        android:textColor="@color/white"
        >


    </androidx.appcompat.widget.AppCompatButton>


</androidx.constraintlayout.widget.ConstraintLayout>
