<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".home.WelcomeHomeFragment">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logoApp"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="24dp"
            android:src="@drawable/football"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/headerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/logoApp"
            android:text="@string/welcome_title_string"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_16sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/barcaBtn"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_40sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/btn_background"
            android:drawableEnd="@drawable/fc_barcelona"
            android:drawablePadding="@dimen/_20sdp"
            android:padding="@dimen/_10sdp"
            android:text="@string/barca"
            android:textColor="@color/white"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/liverpoolBtn"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_16sdp"
            app:layout_constraintTop_toBottomOf="@+id/barcaBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:drawableEnd="@drawable/ic_liverpool"
            android:background="@drawable/btn_background"
            android:drawablePadding="@dimen/_20sdp"
            android:padding="@dimen/_10sdp"
            android:text="@string/liverpool"
            android:textColor="@color/white"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

